--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <h1>ROCK PAPER SCISSORS</h1>
     <button class="New-Game">Start New Game</button>
+    <p id="Human-Score"></p>
+    <p id="Computer-Score"></p>
   </body>
 </html>
